--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,7 @@
-title: Your awesome title
+---
+title: "Bienvenida a mi blog"
+date: 2019-01-20
+---
 author: GitHub User
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
