--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 ---
-title: "Bienvenida a mi blog"
-date: 2019-01-20
+title: "Bienvenido"
+date: 22-02-16
 ---
-
 author: GitHub User
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
