--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,4 @@
----
-title: "Bienvenido"
-date: 22-02-16
----
+title: Your awesome title
 author: GitHub User
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
